update user stories to use newer logos

--- a/src/templates/single-user-story-page.html
+++ b/src/templates/single-user-story-page.html
@@ -86,18 +86,16 @@ contentHTML
     </div>
     <div class="container pt-5">
       <div class="d-flex justify-content-center align-items-center top-together-images">
-        <div class="position-relative">
-          <div class="blue-line bg-blue position-absolute"></div>
-        </div>
+        <div class="pl-2"></div>
         <img
           alt="Conan"
-          height="103"
-          src="../img/user-stories/conan-box.png"
-          width="90"
+          height="115"
+          src="../../favicon.png"
         >
         <div class="plus mx-3">+</div>
         <img
           alt="@@companyName"
+          height="115"
           src="@@imgSrc"
         >
       </div>
