Fix download link in header from user-stories
the link was relative to the current page so anything nested would break

I removed all the `webRoot` since everything can be absolute path from the `/`

--- a/src/templates/single-user-story-page.html
+++ b/src/templates/single-user-story-page.html
@@ -39,7 +39,7 @@ contentHTML
       style="display:none;visibility:hidden" width="0"></iframe>
 </noscript>
   
-  @@include('./header.html', {"webRoot": ".."})
+  @@include('./header.html')
 
   <section class="breadcrumbs pt-5">
     <div class="container">
