--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,13 +1,13 @@
 <div class="header-bg position-absolute">
-    <img src="@@webRoot/img/kitchen-bg.svg" width="100%"/>
+    <img src="/img/kitchen-bg.svg" width="100%"/>
 </div>
 
 
 <header id="masthead">
     <div class="container">
         <div class="row d-flex justify-content-between">
-            <a class="col-10 col-lg-4 d-block" href="@@webRoot/index.html"><img
-                alt="Conan C++ Package Manager" class="header-logo" src="@@webRoot/img/logo-conan.svg"></a>
+            <a class="col-10 col-lg-4 d-block" href="/index.html"><img
+                alt="Conan C++ Package Manager" class="header-logo" src="/img/logo-conan.svg"></a>
             <div class="col-2 d-flex d-lg-none align-items-center justify-content-end">
                 <button
                         class="d-block d-lg-none hamburger hamburger--collapse text-right" type="button"><span
@@ -17,11 +17,11 @@
                 <nav class="header-nav align-items-center d-lg-flex" id="headerNav">
                     <!--Conan-Center-->
                     <a href="https://conan.io/center/" class="btn conan-blue-border">
-                        <img src="@@webRoot/img/small-search.svg" alt="Search" class="conan-center-icon mr-2 black">
+                        <!-- <img src="/img/small-search.svg" alt="Search" class="conan-center-icon mr-2 black"> -->
                         ConanCenter
                     </a>
                     <!-- FAQ -->
-                    <a href="@@webRoot/faq.html" class="btn black">
+                    <a href="/faq.html" class="btn black">
                         FAQ
                     </a>
                     <!-- Docs -->
@@ -35,11 +35,11 @@
                     <!-- Github -->
                     <a class="btn p-0 mr-3" href="https://github.com/conan-io/conan"
                        rel="nofollow noopener noreferrer" target="_blank">
-                        <img src="@@webRoot/img/small-github.svg" alt="Github">
+                        <img src="/img/small-github.svg" alt="Github">
                     </a>
                     <div class="downloads-cta arrow-cta">
                         <div class="button_cont">
-                            <a href="downloads.html" class="btn conan-blue-gradient-bg white font-weight-bold" id="download_btn_header">
+                            <a href="/downloads.html" class="btn conan-blue-gradient-bg white font-weight-bold" id="download_btn_header">
                                 <span>
                                     Downloads
                                 </span>
