Make sure images have complete names
for better SEO results, not that anyone should be looking for these All images should have filename "conan-xxxx"

closes #47

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,5 +1,5 @@
 <div class="header-bg position-absolute">
-    <img src="/img/kitchen-bg.svg" width="100%"/>
+    <img src="/img/conan-chibi-frog-kitchen-bg.svg" width="100%"/>
 </div>
 
 
@@ -7,7 +7,7 @@
     <div class="container">
         <div class="row d-flex justify-content-between">
             <a class="col-10 col-lg-4 d-block" href="/index.html"><img
-                alt="Conan C++ Package Manager" class="header-logo" src="/img/logo-conan.svg"></a>
+                alt="Conan C++ Package Manager" class="header-logo" src="/img/conan-logo.svg"></a>
             <div class="col-2 d-flex d-lg-none align-items-center justify-content-end">
                 <button
                         class="d-block d-lg-none hamburger hamburger--collapse text-right" type="button"><span
