Fix GitHub logo size in header
closes #292 Github button blurry on homepage

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -35,7 +35,7 @@
                     <!-- Github -->
                     <a class="btn p-0 mr-3" href="https://github.com/conan-io/conan"
                        rel="nofollow noopener noreferrer" target="_blank">
-                        <img src="/img/small-github.svg" alt="Github">
+                        <img src="/img/small-github.svg" height="85%" alt="Github">
                     </a>
                     <div class="downloads-cta arrow-cta">
                         <div class="button_cont">
